--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -18,95 +18,90 @@
         </Grid>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid>
+        <Grid VerticalOptions="CenterAndExpand">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="10*" />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
 
             </Grid.RowDefinitions>
-            <!--<Grid BackgroundColor="#0D6EFD"  Padding="10,10,0,0" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="18"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid WidthRequest="18">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-                    <Image Source="{extensions:ImageResource DestoPesto.Images.back_arrow.png}" >
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding BackCommand}"/>
-                        </Image.GestureRecognizers>
-                    </Image>
-                </Grid>
-                <Image Grid.Column="1" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" BackgroundColor="#0D6EFD"  />
-            </Grid>-->
+            <!--<StackLayout Grid.Row="1" VerticalOptions="Center">-->
 
-            <StackLayout Grid.Row="1" VerticalOptions="Center">
+            <!--<Image Source="{AppThemeBinding Light={extensions:ImageResource DestoPesto.Images.login_header.png}, Dark={extensions:ImageResource DestoPesto.Images.login_header.png}}"  />-->
 
-                <!--<Image Source="{AppThemeBinding Light={extensions:ImageResource DestoPesto.Images.login_header.png}, Dark={extensions:ImageResource DestoPesto.Images.login_header.png}}"  />-->
+            <!--<StackLayout Padding="0" Margin="15,10" >-->
 
-                <StackLayout Padding="0" Margin="15,10" >
+            <!--<Frame BackgroundColor="Transparent"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">-->
+            <!--<StackLayout Orientation="Horizontal">-->
+            <!--<Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5">-->
+            <Image Grid.Column="1"  Grid.Row="1" Source="{extensions:ImageResource DestoPesto.Images.email.png}" HeightRequest="60" WidthRequest="60"   Aspect="AspectFill" Margin="0" />
+            <!--</Frame>-->
 
-                    <Frame BackgroundColor="Transparent"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                        <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5">
-                                <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
-                            </Frame>
+            <Entry Grid.Row="1" Grid.Column="2" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" >
+                <Entry.Behaviors>
+                    <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
+                        <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
+                        <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
+                    </xct:MultiValidationBehavior>
+                </Entry.Behaviors>
+            </Entry>
+            <!--</StackLayout>-->
+            <!--</Frame>-->
+            <!--<StackLayout  Orientation="Horizontal">-->
 
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" >
-                                <Entry.Behaviors>
-                                    <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
-                                        <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
-                                        <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
-                                    </xct:MultiValidationBehavior>
-                                </Entry.Behaviors>
-                            </Entry>
-                        </StackLayout>
-                    </Frame>
-                    <StackLayout  Orientation="Horizontal">
+            <Label Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.SomethingIsNotRightEmail}" x:Name="txtWrongEmail" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
 
-                        <Label Text="{x:Static resources:Properties.Resources.SomethingIsNotRightEmail}" x:Name="txtWrongEmail" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-
-                    </StackLayout>
+            <!--</StackLayout>-->
 
 
-                    <Frame BackgroundColor="Transparent" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
-                        <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">
-                                <Image Source="{extensions:ImageResource DestoPesto.Images.key.png}" Aspect="AspectFill" Margin="0"/>
-                            </Frame>
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txtPassword_TextChanged">
-                                <Entry.Behaviors>
-                                    <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
-                                </Entry.Behaviors>
-                            </Entry>
-                        </StackLayout>
-                    </Frame>
-                    <StackLayout  Orientation="Horizontal">
-                        <Label Text="{x:Static resources:Properties.Resources.SomethingIsNotRightPassword}" x:Name="txtWrongPass" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-                    </StackLayout>
+            <!--<Frame BackgroundColor="Transparent" Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">-->
+            <!--<StackLayout Orientation="Horizontal">-->
+            <!--<Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">-->
+            <Image Grid.Row="3" Grid.Column="1" HeightRequest="60" WidthRequest="60"  Source="{extensions:ImageResource DestoPesto.Images.password.png}" Aspect="AspectFill" Margin="0"/>
+            <!--</Frame>-->
+            <Entry Grid.Column="2" Grid.Row="3" Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txtPassword_TextChanged">
+                <Entry.Behaviors>
+                    <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
+                </Entry.Behaviors>
+            </Entry>
+            <!--</StackLayout>-->
+            <!--</Frame>-->
+            <!--<StackLayout  Orientation="Horizontal">-->
+            <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.SomethingIsNotRightPassword}" x:Name="txtWrongPass" IsVisible="false" TextColor="Red" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
+            <!--</StackLayout>-->
 
 
-                    <StackLayout  Orientation="Horizontal">
 
-                        <Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}" TextColor="Blue" TextDecorations="Underline" x:Name="forgoPass">
-
-                        </Label>
+            <Label Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="Center" Text="{x:Static resources:Properties.Resources.ForgetPasswordText}" TextColor="Blue" TextDecorations="Underline" x:Name="forgoPass"></Label>
 
 
-                        <!--<Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />-->
+            <!--<Label Text="{x:Static resources:Properties.Resources.ForgetPasswordText}"  TextColor="DarkGray" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />-->
 
-                    </StackLayout>
 
-                    <Button Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                        <Label Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" />
-                    </StackLayout>
-                    <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                        <Label Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" />
-                    </StackLayout>
+            <Button Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" HorizontalOptions="FillAndExpand" Text="{x:Static resources:Properties.Resources.SigninText}" x:Name="btnSignIn" Clicked="btnSignIn_Clicked" BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None" IsEnabled="{Binding IsValid, Source={x:Reference  EmailMultiValidator}}" />
+            <!--<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">-->
+            <Label Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" Text="{x:Static resources:Properties.Resources.CreateAccountText}" TextColor="DarkGray" />
+            <!--</StackLayout>-->
+            <!--<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">-->
+            <Label Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" Text="{x:Static resources:Properties.Resources.SignUpText}"  TextColor="#0D6EFD" x:Name="lblSignup"  FontAttributes="Bold" />
+            <!--</StackLayout>-->
 
-                    <!--<StackLayout Margin="0,25,0,0" Padding="0">
+            <!--<StackLayout Margin="0,25,0,0" Padding="0">
                     <Grid>
                         <BoxView BackgroundColor="#828282" HeightRequest="1" WidthRequest="150"  HorizontalOptions="Center" VerticalOptions="Center"/>
                         <Frame BackgroundColor="White" HeightRequest="45" WidthRequest="45" CornerRadius="45" HasShadow="False" BorderColor="DarkGray" Margin="0" HorizontalOptions="Center" Padding="0">
@@ -115,11 +110,11 @@
                         </Frame>
                     </Grid>
                 </StackLayout>-->
-                </StackLayout>
+            <!--</StackLayout>-->
 
 
-            </StackLayout>
-            <Image Grid.Row="2" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"/>
+            <!--</StackLayout>-->
+            <Image Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Center" VerticalOptions="EndAndExpand"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
