--- a/DestoPesto/DestoPesto/Views/SignupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignupPage.xaml
@@ -66,7 +66,7 @@
                                 </Frame>
 
 
-                                <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" Keyboard="Email" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                     <Entry.Behaviors>
                                         <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                                             <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
