--- a/DestoPesto/DestoPesto/Views/UserProfilePage.xaml
+++ b/DestoPesto/DestoPesto/Views/UserProfilePage.xaml
@@ -23,14 +23,14 @@
 
     <ContentPage.Content>
 
-        <StackLayout BackgroundColor="White" Grid.Row="1" VerticalOptions="Start" Padding="0,50,0,0">
+        <StackLayout BackgroundColor="White" Grid.Row="1" VerticalOptions="Start" Padding="5">
 
             <Label Text="{x:Static resources:Properties.Resources.UserProfileText}" TextColor="#0D6EFD" HorizontalOptions="CenterAndExpand" FontSize="Title"/>
             <!--<Label  Text="{x:Static resources:Properties.Resources.UserProfileText_2}" TextColor="#0D6EFD"  HorizontalOptions="CenterAndExpand" FontSize="Header" />-->
 
             <!--<Image Source="{AppThemeBinding Light={extensions:ImageResource DestoPesto.Images.login_header.png}, Dark={extensions:ImageResource DestoPesto.Images.login_header.png}}"  />-->
 
-            <StackLayout Padding="0" Margin="15,10" >
+            <StackLayout Padding="5" Margin="15,10" >
 
 
                 <StackLayout  Orientation="Horizontal">
@@ -41,7 +41,7 @@
 
 
 
-                <StackLayout BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
+                <StackLayout BackgroundColor="White" Padding="5" Orientation="Vertical" Spacing="0">
                     <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.PersonNameLabel}" ></Label>
                     <extensions:EntryEx BorderColor="LightGray" CornerRadius="10"  BackgroundColor="Transparent" TextColor="#0D6EFD" Text="{Binding Name}" Margin="0,0,0,0" PlaceholderColor="DarkGray"  Placeholder="{x:Static resources:Properties.Resources.PersonNamePlaceHolder}"  x:Name="txtPassword"    HorizontalOptions="FillAndExpand" >
                     </extensions:EntryEx>
@@ -49,13 +49,13 @@
 
 
 
-                <StackLayout BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
+                <StackLayout BackgroundColor="White" Padding="5" Orientation="Vertical" Spacing="0">
                     <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.EmailLabel}" ></Label>
                     <extensions:EntryEx BorderColor="LightGray" BackgroundColor="Transparent"  Margin="0,0,0,0" PlaceholderColor="DarkGray" TextColor="#0D6EFD" Text="{Binding Email}"  Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand"  Keyboard="Email"  >
                     </extensions:EntryEx>
                 </StackLayout>
 
-                <StackLayout  BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
+                <StackLayout  BackgroundColor="White" Padding="5" Orientation="Vertical" Spacing="0">
                     <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.MobilePhoneLabel}" ></Label>
                     <extensions:EntryEx BorderColor="LightGray" BackgroundColor="Transparent"  PlaceholderColor="DarkGray" Margin="0,0,0,0" TextColor="#0D6EFD" Text="{Binding PhoneNumber}"   Placeholder="{x:Static resources:Properties.Resources.MobilePhonePlaceHolder}"   HorizontalOptions="FillAndExpand" />
 
@@ -84,7 +84,7 @@
                     </StackLayout>
                 </Frame>-->
 
-                <StackLayout BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
+                <StackLayout BackgroundColor="White" Padding="5" Orientation="Vertical" Spacing="0">
                     <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.BirthDateLabel}" ></Label>
                     <Grid IsVisible="{Binding iOS}" HorizontalOptions="FillAndExpand">
                         <DatePicker x:Name="iOsBirthDatePicker"  VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Margin="0,0,4,0" Date="{x:Static sys:DateTime.Now}">
@@ -93,8 +93,7 @@
                     </Grid>
 
                     <Grid IsVisible="{Binding IsAndroid}" HorizontalOptions="FillAndExpand">
-                        <extensions:EntryEx BorderColor="LightGray" x:Name="birthDateEntry" PlaceholderColor="DarkGray" Focused="birthDateEntry_Focused" Text="{Binding BirthDateText}"  TextColor="#0D6EFD" Placeholder="{x:Static resources:Properties.Resources.BirthDateLabel}"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" >
-                        </extensions:EntryEx>
+                        <extensions:EntryEx BorderColor="LightGray" x:Name="birthDateEntry" PlaceholderColor="DarkGray" Focused="birthDateEntry_Focused" Text="{Binding BirthDateText}"  TextColor="#0D6EFD" Placeholder="{x:Static resources:Properties.Resources.BirthDateLabel}"  BackgroundColor="White"  HorizontalOptions="FillAndExpand" />
                         <DatePicker BackgroundColor="White" TextColor="#0D6EFD" IsVisible="false" IsEnabled="False" x:Name="birthDatePicker"  VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand" Date="{x:Static sys:DateTime.Now}">
                             <DatePicker.Format>dd-MM-yyyy</DatePicker.Format>
                         </DatePicker>
@@ -123,27 +122,98 @@
                 </Frame>-->
 
 
-                <StackLayout BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
-                    <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.AcceptedPhotosLabel}" ></Label>
-                    <extensions:EntryEx BorderColor="LightGray"  Text="{Binding AcceptedPhotosText}" IsReadOnly="True" PlaceholderColor="DarkGray" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+                <StackLayout BackgroundColor="White" Padding="5" Orientation="Vertical" Spacing="0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition  Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions >
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.AcceptedPhotosLabel}" VerticalTextAlignment="Center" />
+                        <Label Grid.Column="1" Text="{Binding AcceptedPhotosText}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+                        
+                        <Label Grid.Row="1" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.RejectedPhotosLabel}" ></Label>
+                        <Label Grid.Row="1" Grid.Column="1" Text="{Binding RejectedPhotosText}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+                        <Label Grid.Row="2" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalSubs}" />
+                        <Label Grid.Row="2" Grid.Column="1" Text="{Binding totalsubs}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+                        <Label Grid.Row="3" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.Oldest_Sub}" />
+                        <Label Grid.Row="3"  Grid.Column="1" Text="{Binding oldest_sub}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+
+                        <Label Grid.Row="4"  TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalFixedDamages}" />
+                        <Label Grid.Row="4" Grid.Column="1" Text="{Binding fixedSubsText}" TextColor="#0D6EFD"  VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+                        <Label Grid.Row="5"  TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalUnfixedSubs}" />
+                        <Label Grid.Row="5" Grid.Column="1" Text="{Binding unFixedSubsText}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+                        <Label Grid.Row="6"  TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.PercentageOfFixed}" />
+                        <Label Grid.Row="6" Grid.Column="1" Text="{Binding percentage}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+                        <Label Grid.Row="7" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.AverageRepairDays}" />
+                        <Label Grid.Row="7" Grid.Column="1" Text="{Binding average_repair_days}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="End" HorizontalOptions="End" FontSize="Large" />
+
+
+
+                    </Grid>
                 </StackLayout>
 
-                <StackLayout  BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
+                <!--<StackLayout  BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
                     <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.RejectedPhotosLabel}" ></Label>
                     <extensions:EntryEx BorderColor="LightGray" Text="{Binding RejectedPhotosText}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
-                </StackLayout>
+                </StackLayout>-->
 
-                <StackLayout  BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
-                    <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalFixedDamages}" />
+                <!--<StackLayout  BackgroundColor="White" Padding="10" Orientation="Vertical" Spacing="0">
                     <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+
+                        </Grid.RowDefinitions>
+                        
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <extensions:EntryEx BorderColor="LightGray" Text="{Binding fixedSubsText}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
-                        <extensions:EntryEx Grid.Column="1" BorderColor="LightGray" Text="{Binding unFixedSubsText}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+                        <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalSubs}" />
+                        <extensions:EntryEx Grid.Row="1"  BorderColor="LightGray" Text="{Binding totalsubs}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+
+                        <Label Grid.Column="1" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.Oldest_Sub}" />
+                        <extensions:EntryEx Grid.Row="1"  Grid.Column="1" BorderColor="LightGray" Text="{Binding oldest_sub}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+
+                        
+                        <Label Grid.Row="2"  TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalFixedDamages}" />
+                        <extensions:EntryEx Grid.Row="3" BorderColor="LightGray" Text="{Binding fixedSubsText}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+
+                        <Label Grid.Row="2" Grid.Column="1" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.TotalUnfixedSubs}" />
+                        <extensions:EntryEx Grid.Row="3" Grid.Column="1" BorderColor="LightGray" Text="{Binding unFixedSubsText}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+
+                        <Label Grid.Row="4"  TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.PercentageOfFixed}" />
+                        <extensions:EntryEx Grid.Row="5" BorderColor="LightGray" Text="{Binding percentage}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+                        
+                        <Label Grid.Row="4" Grid.Column="1" TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.AverageRepairDays}" />
+                        <extensions:EntryEx Grid.Row="5" Grid.Column="1" BorderColor="LightGray" Text="{Binding average_repair_days}" IsReadOnly="True" TextColor="#0D6EFD" BackgroundColor="White" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" />
+
+
+
                     </Grid>
-                </StackLayout>
+                    
+                </StackLayout>-->
 
 
                 <!--<Frame BackgroundColor="White"   Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" IsVisible="{Binding ContestParticipation}" >
