--- a/DestoPesto/DestoPesto/Views/MainPage.xaml
+++ b/DestoPesto/DestoPesto/Views/MainPage.xaml
@@ -118,15 +118,16 @@
                         <!--<ColumnDefinition Width="Auto"/>-->
                         <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
-                    <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="{x:Static resources:Properties.Resources.MunicialityText}" />
-                    <Label  Grid.Column="1" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="StartAndExpand" VerticalOptions="Center" TextColor="#0D6EFD" BackgroundColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="{Binding MunicipalityStats.MunicipalityName}" />
-                    <Label  Grid.Column="1" Grid.Row="2" VerticalOptions="Center" TextColor="White" FontSize="Header"  Text="{Binding MunicipalityStats.ranking}"/>
-
+  
 
                     <!--<Image Grid.Column="2" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="12" WidthRequest="12" VerticalOptions="Center"/>-->
 
                     <Button Grid.Column="0" Grid.RowSpan="3" x:Name="ShareBtn" BorderColor="White" BorderWidth="0"  VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="50" WidthRequest="50"  Margin="2" CornerRadius="10"/>
                     <Button  Grid.Column="3" Grid.RowSpan="3" x:Name="MoreBtn" BorderColor="Gray" BorderWidth="0" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" HeightRequest="50" WidthRequest="50" Clicked="MoreBtn_Clicked" Margin="2"/>
+
+                    <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="1" IsVisible="{Binding VisibleMunicipality}" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="{x:Static resources:Properties.Resources.MunicialityText}" />
+                    <Label  Grid.Column="1" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="StartAndExpand" VerticalOptions="Center" TextColor="#0D6EFD" BackgroundColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="{Binding MunicipalityStats.MunicipalityName}" />
+                    <Label  Grid.Column="1" Grid.Row="2" VerticalOptions="Center" TextColor="White" FontSize="Header"  Text="{Binding MunicipalityStats.ranking}"/>
 
                     <Label  Grid.Column="2"  Grid.Row="0" Grid.RowSpan="2"  VerticalOptions="Center" HorizontalTextAlignment="Center" HorizontalOptions="Center" TextColor="White" VerticalTextAlignment="Center" LineBreakMode="WordWrap" Text="{Binding MunicipalityStats.rating}" FontSize="Large" />
                     <Image Grid.Column="2" Grid.Row="2"   WidthRequest="50" HeightRequest="20" HorizontalOptions="Center" Source="{Binding MunicipalityStats.ratingStars}"/>
